added summaries to the units and adjusted their formatting

--- a/_units/01.md
+++ b/_units/01.md
@@ -7,10 +7,21 @@ title: The Auditory Stimulus
 number: 1
 short_description: Introduction to the physics of sound and its mathematical 
   and digital representation.
-summary: Sound is a complex perceptual phenomenon related to variations 
-  in pressure caused by some event in the world. In this unit, we have discussed
-  some fundamental aspects of the auditory stimulus, as well as a number of
-  ways in which it is represented.
+summary: "Our bodies contain complex organs that are sensitive to rapid 
+variations in the air pressure around us. These pressure variations, 
+along with different representations of them, are what we might call 
+the _auditory stimulus_, that is the source of stimulation for 
+the auditory sensors our bodies are equipped with. 
+The auditory stimulus is the aspect of the complex phenomenon of sound 
+that we all share, whether we hear it or not. It is the physical component of 
+sound that travels from sources to receivers. The thing can be captured 
+with microphones, recorded using analog and digital technologies, 
+and played back with amplifiers and speakers. It is the thing represented 
+when we read and write music notation. The nature of the auditory stimulus 
+as fluctuations in the pressure of a medium over time means that it is not 
+able to be directly captured; that is to say, the study of the 
+auditory stimulus is really the study of the persistent physical traces 
+it leaves behind as it interacts with objects sensitive enough to be displaced by it."
 authors: 
 - John MacCallum
 topics: [Physics of Sound and its Representation]
