--- a/_units/02.md
+++ b/_units/02.md
@@ -6,8 +6,19 @@
 title: The Auditory System
 number: 2
 short_description: Anatomy and physiology
-summary: In this unit we will discuss the biological process of hearing. We will cover the structure and function of the auditory system focusing on the elements that allow us to conceptualize hearing as an actively perceiving process, more than just a passive response to a physical stimulus. We will also compare our musical system with other species, and try to understand when and why the auditory system malfunctions and how to protect our own hearing.
-# The biological basis of hearing
+summary: "The auditory system is a complex collection of organs that transfer 
+sound from pressure waves in the air around us into electric signals that are 
+ultimately processed by the brain. The auditory system can be thought of as 
+consisting of two parts: the ear, itself made up of the outer, middle, 
+and inner sections, and the central nervous system, which includes various structures 
+in the brain and the spinal cord that enable hearing. The different organs 
+that comprise the auditory system play different roles in providing us with 
+information about our sonic environment. The cochlea, for example, a fluid-filled 
+spiral-shaped organ that contains the basilar membrane, is primarily responsible 
+for sensing frequency, the physical correlate of our perception of pitch. 
+In addition to the operation of each ear as a separate organ, the brain is able 
+to integrate information from the two in order to form accurate judgements about 
+the position of sound sources in space."
 
 authors:
  - Psyche Loui
