--- a/_units/03.md
+++ b/_units/03.md
@@ -6,7 +6,25 @@
 title: Fundamentals of Psychoacoustics
 number: 3
 short_description: This unit is concerned with how sounds interact with the world and the influence knowledge and understanding can exert. One important distinction to make is between the Bottom-Up and Top-Down perspectives of perception. Bottom-Up processing gives rise to some signal processing manifested in loudness perception and room acoustics, which, in turn, are also dependent on Top-Down knowledge. Auditory illusions caused by a mismatch between Top-Down and Bottom-Up signals will be discussed as well.
-summary: In the previous unit, we discussed sound largely in the abstract, whereas here we have seen that the environment and our auditory system both play a large role in our perception and understanding of the sonic world around us. It is not enough to say that a signal has an amplitude of 0.5—as we have seen, this will mean different things depending on the frequency. From the bottom-up, we can say that the signal has an amplitude of 0.5 and that the loudness will vary depending on the frequency due to the fact that our auditory system is more sensitive at certain frequencies than others; from the top-down, our knowledge of the origin of the sound source (what made it, where it comes from, etc.) may influence the way in which we hear the signal. This top-down processing can lead to interesting auditory illusions such as the McGurk effect, the Franssen effect, and the Clifton effect. Finally, the acoustic environment and how much reverberation that environment adds to a sound dramatically alters the way in which perceive sounds.
+summary: "Do we all experience sounds the same way? One of the reasons sound is 
+such a complex topic is due to the ways in which it interacts with our 
+environment, whether that's a concert hall, a classroom, or a forest. As it 
+radiates away from its source, the materials it encounters along the way 
+(surfaces, objects, our bodies) change its quality as well as its direction, 
+and give us information about not only the source, but our environment. 
+This means that even subtle changes in position, such as rotating our heads 
+slightly, can dramatically affect the way we experience a sound source. 
+Once the sound does reach our ears, it passes through a complex array of 
+materials (tissue, bone, fluid, hair) before finally becoming available for 
+processing by the brain in the form of electricity. At this point, 
+higher level cognitive processes help us to make sense of the sound---what it 
+is, where it is, and what it might mean. Ultimately, the judgements we make 
+about sound help us make sense of our environment, but at the same time, 
+they are also subject to what we already know. Because we are always gathering 
+knowledge about our environment, certain cues from the auditory stimulus that 
+suggest impossible scenarios, for example a sound source that seem to be in 
+two places at once, can be overridden by higher-level cognitive processes as 
+we integrate information."
 authors:
  - Psyche Loui and John MacCallum
 topics: [Elementary Psychoacoustics, Bottom-Up vs. Top-Down, Loudness, Reverberation, Perceptual Illusions, Precedence Effect, Audio-Visual Interaction]
