--- a/_units/04.md
+++ b/_units/04.md
@@ -6,13 +6,28 @@ title: Consonance and Dissonance
 number: 4
 short_defscription: "A brief history of consonance and dissonance, with 
 particular emphasis on sensory dissonance and its role in music."
-summary: "In this unit we discuss consonance and dissonance, and the 
-important role they play in music. We will begin with some of the earliest
-observations and attempts to model them, and proceed through more modern 
-understandings of sensory dissonance and its associated physiology."
+
+summary: "What makes some sounds dissonant? Is dissonance a property of 
+sounds themselves, or is it part of our _perception_ of sound? Throughout 
+history many attempts have been made to model dissonance. Early models 
+dating back 2500 years to Ancient Greece and China were geometric in nature, 
+that is, they considered musical intervals as ratios of two string lengths 
+and showed that certain kinds of ratios were associated with consonant 
+intervals, and others with dissonant ones. Today, our models of consonance 
+and dissonance also take into account our understanding of the anatomy and 
+functioning of the inner ear, particularly the basilar membrane, as well as 
+the ways in which temporal fluctuations associated with the perception of 
+dissonance are encoded and transmitted along the auditory nerve and in the 
+Inferior Colliculus. Further, we are able to say that certain high-level 
+cognitive processes can override lower-level sensation, producing judgements 
+of consonance or dissonance that can contradict both physical and anatomical 
+sensation. Taken together, these different perspectives comprise our current 
+models of consonance and dissonance."
+
 authors: 
  - John MacCallum
  - Psyche Loui
+ 
 topics: [Consonance, Dissonance, Sensory Dissonance, Critical Bandwidth, 
 Cochlea, Basilar Membrane, Timbre, Intervals, Tonotopic Mapping]
 test_questions:
