--- a/_units/05.md
+++ b/_units/05.md
@@ -6,7 +6,24 @@
 title: Pitch, Intervals and Key Areas
 number: 5
 short_description: short description of the unit
-summary: Pitch is one of the most important attributes of music. This unit will cover the different types of pitch we may perceive in music. We start with the relationship between frequency in the physical world and pitch in the perceptual world. We continue to discuss the cases when pitch may occur in the absence of energy at the perceived frequency, and propose models which may account for this perceptual phenomenon. Different types of pitch perception will be discussed, including the qualities that makes it form transposable melodies and harmonies. Finally, we will discuss pitch spaces that enable the systematic use of pitch as a musical medium.
+summary: "Some sounds have an identifiable characteristic that we refer to as 
+its \"pitch\", but what exactly do we mean by that, and why do some sounds have 
+this property while others don't? Pitch is a complex phenomenon; when a 
+vibrating object creates pressure variations in the air that repeat at a fixed 
+rate, we refer to that rate as the \"frequency\". Some sounds, like sine tones, 
+consist of a single frequency, which is logarithmically correlated to our 
+experience of pitch. Other sounds, in fact most sounds we hear, consist of many 
+frequencies that fuse together into a single percept. If the different 
+frequencies that comprise a sound vibrate at whole number multiples of a 
+single frequency, we call these sounds \"harmonic\", and tend to assign the 
+overall pitch of the sound to that single least common multiple, even if it 
+isn't present. This harmonic relationship between components, along with other 
+perceptual cues, helps us keep track of a single person's voice at a party, 
+or a particular instrument in an ensemble, even in complex sonic textures of 
+similar sources. The relationship of the harmonics of one pitch to those of 
+another plays a strong role in our qualitative experience of the musical 
+interval between these pitches, and likewise, these relationships form the 
+basis of our notions of musical keys."
 authors:
  - Georg Hajdu
  - Psyche Loui
