--- a/_units/06.md
+++ b/_units/06.md
@@ -6,9 +6,21 @@
 title: Timbre
 number: 6
 short_description: Timbre
-summary: "In this unit, we will discuss the perceptual phenomenon known as timbre, 
-and its relationship to physical characteristics of sound such as the spectrum,
-spectral envelope, and attack."
+summary: "Why does an oboe sound different than a violin? The quality of a 
+sound that helps us make that and other differentiations is called _timbre_ 
+and is notoriously difficult to define, describe, and measure. Although the 
+timbre of a sound may be just as hard to qualify as it is to quantify, its 
+effects on the relationship of one sound to another can profoundly impact our 
+overall experience of them, even strengthening or weakening their structural 
+function in a musical context. To study the timbral characteristics of a sound, 
+we often analyze certain characteristics of its spectrum, such as its envelope, 
+centroid, or noisiness. These measures loosely correlate with many of the ways 
+in which we describe sounds, and help us better understand what it means when 
+we say a sound is \"bright\" or \"dark\" or \"hollow\", etc. However, the 
+temporal evolution of a sound, particularly in the first few milliseconds 
+before the spectrum stabilizes to some degree, has such a strong impact on 
+the way we perceive the timbre of a sound, that without it, we are often unable 
+to discern the source of an otherwise familiar sound."
 authors: 
  - John MacCallum
 topics: [timbre, spectrum, spectral envelope, temporal envelope, attack]
