--- a/_units/07.md
+++ b/_units/07.md
@@ -6,7 +6,22 @@
 title: Rhythm
 number: 7
 short_description: Unit on Rhythm and Meter
-summary: Rhythm is a fundamental element of music around the world. Here we explore the psychological and neural models of rhythm, beat, and meter. Rhythm is defined as the pattern of inter-onset intervals within a train of stimuli. Meter is the repeated, hierarchical characteristic of rhythm, such that repeating streams of stimuli recur at predictable rates. Beat is the perceived accent or emphasis that corresponds to the meter. Prominent models for understanding the perception and production of rhythm include the interval timing model, the covariance model, and the coupled oscillators model. The tuning of different neural populations, or neuronal entrainment, is posed as a likely brain mechanism underlying the perception of beat, rhythm, and meter. We will also discuss higher-level concepts of expressive timing and rubato, and time maps that have beenn derived to visualize these expressive deviations in rhythm and meter.
+summary: "Rhythm refers to a succession of events in time. While some 
+definitions of rhythm involve concepts like repetition or patterns, 
+psychoacoustics situates these properties in terms of our high level cognition, 
+and studies the processes by which we group and segment streams of events into 
+patterns and phrases. We not only impose patterns on sequences of temporal 
+events, but we are able to recognize these patterns as similar even when they 
+contain substantial temporal variation, making rhythm a potent expressive 
+dimension of music performance. In order to study rhythm, we must be able to 
+say when an event began, and in many cases, this is more difficult than we 
+might expect. For some sounds, particularly those that begin abruptly, the 
+physical onset, that is, the very earliest detection of energy released by the 
+sound source, correlates well with our sense of the perceptual onset, or the 
+moment we associate with the beginning of the sound. For other sounds, however, 
+the physical and perceptual onsets are not the same, making the performance of 
+rhythm, and the study of its performance, significantly more complex than 
+simply playing the right note at the right time."
 authors:
  - Psyche Loui
  - John MacCallum
