--- a/_units/08.md
+++ b/_units/08.md
@@ -6,7 +6,20 @@
 title: Gestalt and Melody
 number: 8
 short_description: Unit on Gestalt and Melody
-summary: In this unit we have looked at several perceptual principles which give rise to our experience of melody and melodic processes. The melodic processes we discussed include interval sizes and melodic contour. The Implication-Realization Model, the gap fill principle, and the Gestalt processes of visual perception are all good predictors of the way melodies tend to unfold. Statistical models also play an important role in our understanding and production of melody. Melodies can be modeled as a Hidden Markov Model, or a chain of conditional probabilities. With a matrix that dictates transitions between melodic intervals, we can generate many interesting melodies with predetermined characteristics. Texture arises from the confluence of multiple melodies. The axes of texture space can be defined as onset synchrony and semblant motion, and the resulting figure enables the differentiation between musical styles.
+summary: "Gestalt psychology describes human perception as the ability to 
+identify structures and principles of order in sensory information. 
+In contrast to earlier structuralist views that characterized the perception 
+of complex objects as having been built from their smaller constituent parts, 
+the gestalt view claims that perception contains qualities that do not result 
+from the arrangement of simpler sensory qualities, which is to say, 
+\"the whole is greater than the sum of its parts.\" 
+Musical melody is an example of a gestalt quality: we can replace the 
+notes of a melody with an entirely new set of notes, however, if we are 
+careful to do it in such a way as to preserve the relationships between notes, 
+we will hear the new melody as the same as the original. The gestalt 
+perspective as applied to musical material then, is the study of the 
+relationships between musical elements that give rise to the perception of 
+musical structure."
 authors:
  - Georg Hajdu
  - Psyche Loui
