--- a/_units/09.md
+++ b/_units/09.md
@@ -6,7 +6,20 @@
 title: Scale and Harmony
 number: 9
 short_description: A scale is a set of ascending or descending pitches ordered according to cognitive, theoretical and/or historical principles. They provide the pitch material from which harmonies are built. The theory of harmony is preoccupied with the laws governing the structure, relation, and progression of chords, much of it based on the principle of tension and release. In recent times, composers and theorists have also started to consider elements such as roughness and inharmonicity when constructing sonorities and their progressions.
-summary: In this unit we have learned about scales and harmony. Harmony is a complex notion that refers both to the pleasantness of simultanously sounding notes as well as the logic in which one sonority moves to another within a given framework such as a key area. A scale contains the tones from which sonorities are formed. These tones can be tuned to pitches according to various principles of which just intonation and equal temperament are examples of. The theory and practice of microtonality takes advantage of the fact that scales can be formed from a virtually unlimited number of pitches. In the 20th and 21st centuries, the principles of tension and release have been expanded by taking musical parameters such as roughness and inharmonicity in consideration.
+
+summary: "The word \"harmony\" has several connotations: in everyday speech, 
+it suggests that things have been arranged in an orderly, pleasing fashion, 
+while in music, it can refer to the sounding together of multiple notes, 
+pleasing or not, or to more complex notions of how different harmonies relate 
+to each other in a structural way. A scale is a closely related notion and 
+refers to the collection of notes from which harmonies in a harmonic system 
+are constructed. Scales and harmony are closely related to intonation, or the 
+way in which we tune the different intervals of a scale. The most common 
+system in Euro-American music today is called twelve-tone equal temperament, 
+in which the octave is divided into twelve equal parts, however, there are 
+many different systems in use around the world, and that have been used by 
+different cultures throughout history."
+
 authors:
  - Georg Hajdu
  - John MacCallum
