--- a/_units/10.md
+++ b/_units/10.md
@@ -6,7 +6,23 @@
 title: Expectation and Anticipation 
 number: 10
 short_description: unit on expectation / anticipation / prediction
-summary: Expectation and anticipation are important and evolutionarily advantageous characteristics of our cognitive system. In music, expectations feature prominently in our perception of melody, harmony, and rhythm. The systematic violation of expectation seems to lead to arousal and affect in our musical experience. The Implication Realization Model and Gap Fill are rather precise models that can be used to predict what is or is not expected in musical melodies, whereas the Dynamic Attention Theory is an account for our expectancies for rhythm. Musical expectancies have been observed using many convergent methods. These methods include production, betting paradigm, probe tone ratings, comparative ethnomusicology, reaction time methodology, the head turn paradigm, and Event-Related Potentials. Statistics in music seem to play an important role in musical composition, where we generally expect musical events that occur with high frequencies and transitional probabilities in a musical style. #just copied the summary from below. --> We are not being able to use two paragraphs.  
+
+summary: "Try singing \"Happy Birthday\", but instead of finishing the song, 
+stop just before the final phrase \"happy birthday to you\". It’s almost 
+painful not to continue. Our desire to \"complete\" a particular melodic, 
+harmonic, or rhythmic sequence is strong; as we listen and make sense of what 
+we are hearing, we are continually anticipating what will come next, 
+just as with language. When our predictions fail, we experience arousal and 
+affect, making the systematic violation of expectation a powerful dimension 
+of musical expression. While there are many open questions regarding the ways 
+in which our sense of expectation works, there are a number of precise models 
+that we can use to predict expectation in musical melodies and rhythms. 
+For example, the Gap-Fill model suggests that a large melodic interval is 
+usually expected to be followed by a series of small intervals in the 
+opposite direction that \"fill the gap\". Statistics also seems to play an 
+important role, as our expectation seems to be correlated with the likelihood 
+of an event."
+
 authors: 
 - Psyche Loui
 topics: [Unit10Introduction, What is expectancy, Why study expectancy, Theories of expectation, Expectancies for Melody, Expectancies for Rhythm, Methods for studying expectancy, Summary, References, Links and Downloads, QuizItems]
