--- a/_units/11.md
+++ b/_units/11.md
@@ -5,7 +5,17 @@
 ###
 title: Music and Language
 number: 11
-summary: Music and language are both systematic, organized uses of sound that enable communication and expression. In this unit we examine the many similarities and differences between music and language. We will compare and contrast music and language, with brief overviews into the evidence of shared neural and cognitive processing of the two domains. We then consider each major facet of the shared domains from the perspective of linguistics, starting from phonology (the study of sounds of language), then moving on to syntax (the ordering of units), semantics (the study of meaning), and prosody (the sounds of speech). We conclude that music and language share many important similarities, but that some of this sharing may be dependent on general characteristics of how the brain processes sequential sounds.
+summary: "Music and language are both systematic, organized uses of sound 
+through which we are able to communicate and express ourselves. While the two 
+are certainly different, they share a number of similar features with one 
+another. For example, both exhibit syntactic structure, and both rely on 
+sensory, cognitive, and the vocal-motor apparatus of the central nervous 
+system. Although there is some evidence that music and language are processed 
+by different parts of the brain, for example, it is possible to lose the 
+ability to speak while retaining the ability to sing and vice versa, recent 
+evidence has shown some degree of overlap in brain activity between the two. 
+Ongoing research suggests that these similarities may be due to certain 
+general characteristics of how the brain processes sequential sounds."
 authors: 
  - Psyche Loui
 topics: [music, language, syntax, prosody]
