added animations to units 2, 3, and 5

--- a/_units/02.md
+++ b/_units/02.md
@@ -20,6 +20,8 @@ In addition to the operation of each ear as a separate organ, the brain is able
 to integrate information from the two in order to form accurate judgements about 
 the position of sound sources in space."
 
+animation: <iframe width="560" height="315" src="https://www.youtube.com/embed/_CqDEiHh79Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 authors:
  - Psyche Loui
 topics: [Auditory Pathway, Structures and functions, Acticve Ear, Evolution of the Auditory System, Music in other Species, Hearing Damage]
@@ -45,12 +47,6 @@ mathjax: true
 {% include unit_preamble.md %}
 
 # How do we hear?
-
-<div style="display: block; text-align: center; float: center">
-<iframe width="560" height="315" src="https://www.youtube.com/watch?v=_CqDEiHh79Q" 
-frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; 
-picture-in-picture" allowfullscreen></iframe>
-</div>
 
 Much of our auditory and musical functions arise from the anatomical structures of our brain and auditory system. To understand the physiological bases of musical phenomena, this unit will provide an in-depth overview of the structure and function of the auditory system.
 
