--- a/_units/03.md
+++ b/_units/03.md
@@ -25,6 +25,7 @@ knowledge about our environment, certain cues from the auditory stimulus that
 suggest impossible scenarios, for example a sound source that seem to be in 
 two places at once, can be overridden by higher-level cognitive processes as 
 we integrate information."
+animation: <iframe width="560" height="315" src="https://www.youtube.com/embed/BoYgMVUmZPY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 authors:
  - Psyche Loui and John MacCallum
 topics: [Elementary Psychoacoustics, Bottom-Up vs. Top-Down, Loudness, Reverberation, Perceptual Illusions, Precedence Effect, Audio-Visual Interaction]
@@ -58,12 +59,6 @@ mathjax: true
 {% include unit_preamble.md %}
 
 # Introduction
-
-<div style="display: block; text-align: center; float: center">
-<iframe width="560" height="315" src="https://www.youtube.com/watch?v=BoYgMVUmZPY" 
-frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; 
-picture-in-picture" allowfullscreen></iframe>
-</div>
 
 In the previous unit we introduced various physical properties of the sound stimulus. We saw that frequency, amplitude, phase, temporal envelopes, and spectral envelopes are all useful descriptors of sounds, and that different visual representations may contain useful information about these sound properties.
 But how do these physical descriptions relate to how you actually hear? In other words, how does our perception of a physical stimulus depend upon its context?
