--- a/_units/05.md
+++ b/_units/05.md
@@ -24,6 +24,8 @@ similar sources. The relationship of the harmonics of one pitch to those of
 another plays a strong role in our qualitative experience of the musical 
 interval between these pitches, and likewise, these relationships form the 
 basis of our notions of musical keys."
+
+animation: <iframe width="560" height="315" src="https://www.youtube.com/embed/IC5q4O3JnIE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 authors:
  - Georg Hajdu
  - Psyche Loui
@@ -48,12 +50,6 @@ mathjax: true
 {% include unit_preamble.md %}
 
 # Introduction
-
-<div style="display: block; text-align: center; float: center">
-<iframe width="560" height="315" src="https://www.youtube.com/watch?v=IC5q4O3JnIE" 
-frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; 
-picture-in-picture" allowfullscreen></iframe>
-</div>
 
 The concept of sound frequencies was first introduced in [Unit 01](/MUTOR/units/01.html). While frequency is a physical attribute which characterizes waves of sound energy, pitch is a perceptual attribute which describes our experience of tones, whether pure (one partial) or complex (several partials). Generally, the higher the frequency of a sound, the higher the perceived pitch. As the spectral composition and temporal development of a sound determine pitch and timbre, an unambiguous pitch percept is only formed for harmonic sounds whose partials have frequencies that are multiples of the fundamental frequency (which also corresponds to the perceived pitch). Inharmonic sounds, in turn, whose partials don't follow this simple rule, have ambiguous pitch caused by competing virtual pitches.
 
