formatting for the quizzes

--- a/_units/04.md
+++ b/_units/04.md
@@ -34,10 +34,15 @@ test_questions:
  - Define the auditory filter. What is the relationship between critical
    band and the Gammatone filter?
  - Which of the following sounds most dissonant?
-   a) C4 and B4 played on pure tones
-   b) C4 and B4 played on two clarinets on the opposite sides of a stage
-   c) C4 and B4 played on two trumpets on the same side of a stage
-   d) C4 and E4 played on two clarinets on the same side of a stage
+ 
+ 
+   1. C4 and B4 played on pure tones
+   
+   1. C4 and B4 played on two clarinets on the opposite sides of a stage
+   
+   1. C4 and B4 played on two trumpets on the same side of a stage
+   
+   1. C4 and E4 played on two clarinets on the same side of a stage
  - Under what conditions are binaural beats most likely to be perceived?
  - Calculate the beat frequency of the second partials $(F_2)$ of complex 
    tones with fundamentals at 440Hz and 441Hz respectively.
