fixed typos from the issue queue

--- a/_units/05.md
+++ b/_units/05.md
@@ -124,7 +124,7 @@ Spectral and virtual pitch: you will hear the tune of Westminster chimes present
 
 ## Strike notes and other curiosities
 
-Terhardt claims that at least three adjacent partials are necessary for the brain to most effectively infer the fundamental pitch in harmonic sounds in the absence of lower partials, such as 6/7/8 oder 10/11/12. However, he found that for 11/12/13, the inferred virtual pitch differs slightly from the frequency of the period (F0). This is hinting at a mechanism for pitch detection that takes more than just the periodicity of a signal into consideration. Starting from this observation and the phenomenon of _strike notes_ in bells - pitches clearly perceived but absent from the bell sprectrum -, Terhardt has formulated a theory of _pattern recognition_ of pitch or _template theory_ (see below). Terhardt asserts that, typically, the first six partials are processed to create a stable pitch perceipt.
+Terhardt claims that at least three adjacent partials are necessary for the brain to most effectively infer the fundamental pitch in harmonic sounds in the absence of lower partials, such as 6/7/8 or 10/11/12. However, he found that for 11/12/13, the inferred virtual pitch differs slightly from the frequency of the period (F0). This is hinting at a mechanism for pitch detection that takes more than just the periodicity of a signal into consideration. Starting from this observation and the phenomenon of _strike notes_ in bells - pitches clearly perceived but absent from the bell sprectrum -, Terhardt has formulated a theory of _pattern recognition_ of pitch or _template theory_ (see below). Terhardt asserts that, typically, the first six partials are processed to create a stable pitch perceipt.
 
 # Pitch Perception Models
 
