--- a/_units/06.md
+++ b/_units/06.md
@@ -59,7 +59,7 @@ of musical structure.
 
 # Descriptions of Timbre
 
-Many of our most common terms for describing timber, e.g. 
+Many of our most common terms for describing timbre, e.g. 
 bright, dark, full, rich, thin, piercing, hollow, warm, cold, brittle,
 velvety, smooth, etc. 
 rely on metaphors that involve senses other than audition. 
@@ -133,7 +133,7 @@ The spectral centroid is a weighted average of the magnitudes a spectrum:
 C=\frac{\sum_{n=0}^{N-1} f(n) a(n)}{\sum_{n=0}^{N-1} a(n)}
 \label{eq:spectralcentroid}
 \end{equation}
-where $$n$$ is the sample numder, $$N$$ is the number of samples in the 
+where $$n$$ is the sample number, $$N$$ is the number of samples in the 
 spectrum, $$f(n)$$ and $$a(n)$$ are the frequency and amplitude of 
 bin $$n$$, respectively.
 
