--- a/_units/03.md
+++ b/_units/03.md
@@ -951,7 +951,7 @@ Audio engineers make use of the precedence effect in the design of concert halls
 
 Like the PrecedenceEffect, the FranssenEffect has to do with perceived sound sources. In a two-channel speaker system, if a tone is presented with rapid onset to one speaker, and this tone is ramped off at the same time as when another tone in the opposite speaker is ramped on and sustained, this combination of tones is perceived as just one tone coming from the first speaker (i.e. the speaker that played the onset). The effect is obtained with narrow-band sounds, and only in echoic environments.
 
-{% include img-figure url="/MUTOR/assets/images/unit3_franssen.gif" description="Franssen Effect" width="450px" %}
+{% include img-figure url="/MUTOR/assets/images/unit3_franssen.png" description="Franssen Effect" width="450px" %}
 (adapted from Dent, Tollin, & Yin, 2004.)
 
 The Franssen Effect. If a rapid-onset tone is presented at the left speaker and then decays slowly while another tone at the right is presented with slowly increasing amplitude, the percept is of a single stimulus coming from the left.
