Renew 5.15 ProbeTone-Method.png

--- a/_units/05.md
+++ b/_units/05.md
@@ -239,6 +239,9 @@ In this method, subjects listen to cadences and scales, with the target sound (t
 By analyzing the data, three groups emerged which, depending on their musical background, were more or less able to perceive tonal hierarchies in major or minor context (the figure on the right shows results typical of experienced musicians).
 
 {% include img-figure url="/MUTOR/assets/images/ProbeTone-Method.png" description="Probe Tone Method" width="400px" %}
+{% comment %}
+Original figure description: 'Listeners ratings of stability of each pitch class after the presentation of a) C major; and b) C minor tonal contexts (after [2]). Tonal hierarchies for other keys are obtained by shifting the stability values circularly.'
+{% endcomment %}
 
 # Key Space
 
