--- a/_units/07.md
+++ b/_units/07.md
@@ -143,24 +143,24 @@ The rhythmogram is an effective way to visualize rhythmic structure in a musical
 
 To visualize the low-frequency filterbank, consider a set of very low-frequency bandpass filters arranged logarithmically. For instance, several filters along the filterbank could be: 0.125Hz, 0.25Hz, 0.5Hz, 1Hz, 2Hz, and 4Hz. The rhythmogram plots musical time on the x axis and these filters on the y axis.
 
-{% include img-figure url="/MUTOR/assets/images/unit7_rhythmogram1.gif" description="Rhythmogram1" width="400px" %}
+{% include img-figure url="/MUTOR/assets/images/unit7_rhythmogram1.png" description="Rhythmogram1" width="400px" %}
 
 The axes of the rhythmogram: frequency filterbank vs. time.
 
 In this representation, notes which occur quickly, e.g. sixteenth notes, would show activity at the highest frequency filters along the filterbank.
 
-{% include img-figure url="/MUTOR/assets/images/unit7_rhythmogram2.gif" description="Rhythmogram2" width="400px" %}
+{% include img-figure url="/MUTOR/assets/images/unit7_rhythmogram2.png" description="Rhythmogram2" width="400px" %}
 Fast notes activate high-frequency filters along the filterbank.
 
 Notes occurring at the next fastest level, i.e. eighth notes, would appear as activity at the next level of filters:
 
-{% include img-figure url="/MUTOR/assets/images/unit7_rhythmogram3.gif" description="rhythmogram3" width="400px" %}
+{% include img-figure url="/MUTOR/assets/images/unit7_rhythmogram3.png" description="rhythmogram3" width="400px" %}
 The next level of notes (quarter notes) would then appear energy at 1Hz filters, half notes at 0.5Hz filters, and finally, at the highest level, whole notes would appear at 0.25Hz filters.
 
-{% include img-figure url="/MUTOR/assets/images/unit7_rhythmogram4.gif" description="rhythmogram4" width="400px" %}
+{% include img-figure url="/MUTOR/assets/images/unit7_rhythmogram4.png" description="rhythmogram4" width="400px" %}
 Taken together, we see an emergent tree-like diagram of rhythmic activity, with the different layers of the filterbank representing each level of rhythmic structure and importance. Thus, we can say that the rhythmogram provides a visual representation of the tree-like rhythmic structure of a musical piece.
 
-{% include img-figure url="/MUTOR/assets/images/unit7_rhythmogram5.gif" description="rhythmogram5" width="400px" %}
+{% include img-figure url="/MUTOR/assets/images/unit7_rhythmogram5.png" description="rhythmogram5" width="400px" %}
 The theoretically derived rhythmogram can be applied to actual performances to represent not only the rhythmic structure of the composition, but also the perceptual experience of the piece as a function of its decay rate over time. This links the mathematical idea of a filterbank to the auditory system, with its built-in mechanisms for the detection of onsets. In addition, the rhythmogram could be used to represent the sound structure of speech as well as music.
 
 An application of the rhythmogram to represent perceptual decay is shown here in the speech utterance "tennessee air":
